--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -280,7 +280,7 @@
     </div>
     <div class="flex items-center relative mx-auto w-3/5 mb-4">
       <video #videoAuto loop muted class="w-full rounded-lg shadow-lg">
-        <source src="\assets\vidéos\auto.8422193f4b8791cdd5e84ec571833d47"type="video/mp4" />
+        <source src="assets\vidéos\auto.8422193f4b8791cdd5e84ec571833d47"type="video/mp4" />
         Votre navigateur ne supporte pas la vidéo.
       </video>
       <button class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white/30 text-white text-4xl rounded-full w-16 h-16 flex items-center justify-center backdrop-blur-sm" (click)="toggleVideo('auto')">
@@ -293,7 +293,7 @@
     <!-- Assurance Vie -->
     <div class="flex items-center relative mx-auto w-3/5 mb-4">
       <video #videoVie loop muted class="w-full rounded-lg shadow-lg">
-        <source src="\assets\vidéos\vie.mp4" type="video/mp4" />
+        <source src="assets\vidéos\vie.mp4" type="video/mp4" />
         Votre navigateur ne supporte pas la vidéo.
       </video>
       <button class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white/30 text-white text-4xl rounded-full w-16 h-16 flex items-center justify-center backdrop-blur-sm" (click)="toggleVideo('vie')">
